# program-python-course-26

./: .gitignore  README.md  main.py  pyproject.toml
src/homework_01_Sort/: README-CN.md  README.md  __init__.py  binary_io.py  external_sort.py  main.py  pyproject.toml  random_numbers.txt  sorted_input.txt  text_io.py
src/homework_01_Sort/visual_external_sort/: README.md
src/homework_02_Django/: README-CN.md  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
src/homework_02_Django/catalog/: admin.py  forms.py  models.py  urls.py  views.py
src/homework_02_Django/catalog/migrations/: 0001_initial.py
src/homework_02_Django/static/catalog/css/: style.css
src/homework_02_Django/templates/catalog/: base.html  home.html  watch_confirm_delete.html  watch_detail.html  watch_form.html  watch_list.html
src/homework_02_Django/watch_catalog/: asgi.py  settings.py  urls.py  wsgi.py
