[project]
name = "homework-01-sort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["homework_01_Sort"]

[tool.setuptools.package-dir]
homework_01_Sort = "."
